--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-config:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-config'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.google.android.gms:play-services-nearby:18.0.1'
+    implementation 'com.google.android.gms:play-services-nearby:18.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation "com.github.pgreze:android-reactions:1.3"
     implementation 'com.devlomi:circularstatusview:1.0.1'
